# src/main/java/com/isanorte/constructora_api/enums/OrdenResena.java
@@ -1,0 +1,8 @@
+package com.isanorte.constructora_api.enums;
+
+public enum OrdenResena {
+    RECIENTES,
+    MAYOR_CALIFICACION,
+    MENOR_CALIFICACION,
+    MAS_UTILES
+}
